CasierConnectees/sortieCompil.txt
wiegand.cpp: In static member function ‘static void Wiegand::readD0()’:
wiegand.cpp:22:32: error: invalid use of member ‘Wiegand::wiegandbits’ in static member function
     if((wiegandBitCount / 8) < wiegandbits){
                                ^~~~~~~~~~~
In file included from wiegand.cpp:1:
wiegand.h:27:18: note: declared here
     unsigned int wiegandbits;
                  ^~~~~~~~~~~
wiegand.cpp: In static member function ‘static void Wiegand::readD1()’:
wiegand.cpp:31:32: error: invalid use of member ‘Wiegand::wiegandbits’ in static member function
     if((wiegandBitCount / 8) < wiegandbits){
                                ^~~~~~~~~~~
In file included from wiegand.cpp:1:
wiegand.h:27:18: note: declared here
     unsigned int wiegandbits;
                  ^~~~~~~~~~~
make: *** [Makefile:492: wiegand.o] Error 1
